<resources>
    <string name="app_name">Clone Do Aplicaivo do Banco Pan.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_name">Fredymar</string>
    <string name="contentDescriptionImageView">Foto do cliente</string>
    <string name="current_balance">Saldo atual</string>
    <string name="current_balance_number">R$ 1.400,00</string>
    <string name="pix">Pix</string>
    <string name="desc_icon_pix">Icone de pix</string>
    <string name="desc_icon_payments">Icone de pagamento</string>
    <string name="desc_icon_shoppingPAN">Icone de Shopping PAN</string>
    <string name="desc_icon_loans">Icone de Empréstimos</string>
    <string name="tv_card_pix">Pix</string>
    <string name="tv_card_payments">Pagamentos</string>
    <string name="tv_card_shoppingPAN">Shopping PAN</string>
    <string name="tv_card_loans">Empréstimos</string>

<!--    GridLayout 2-->
    <string name="tv_message_card">Peça um\ncartão agora</string>
    <string name="tv_title_card">Cartão</string>
    <string name="tv_title_apply_loan">Empréstimos</string>
    <string name="tv_message_apply_loan">Pegue até:</string>
    <string name="tv_apply_loan">Pegue até:</string>
    <string name="tv_loan_amount">R$ 12.000,00</string>
    <string name="tv_title_apply_investments">Investimentos</string>
    <string name="tv_message_apply_investments">Coloque seu \ndinheiro para \nrender</string>
    <string name="tv_title_payment_options">Pagamentos</string>
    <string name="tv_message_payment_options">Parcele seus \nboletos em \naté 12x</string>

<!--    Fragment Card-->
    <string name="elo_card">elo</string>
    <string name="text_card">Múltiplo * 1234</string>
    <string name="icon_bank">Icone do banco PAN</string>
    <string name="tv_card_limit">Você ainda \npode gastar:</string>
    <string name="tv_available_card_limit">R$ 1.245,00</string>
    <string name="tv_current_invoice">Sua fatura atual está em:</string>
    <string name="tv_current_invoice_amount">R$ 755,00</string>

<!--    FragmentInvestments-->
    <string name="title_daily_liquidity">CDB Liquidez diária</string>
    <string name="daily_liquidity_percentage">130% do CDI</string>
    <string name="information_protection">Protegido pelo FGC</string>
    <string name="tv_min_investment">Investimento \nmínimo</string>
    <string name="min_investment_value">R$ 5,00</string>
    <string name="tv_max_investment">Investimento \nmáximo</string>
    <string name="max_investment_value">R$ 10.000</string>
    <string name="investment_term">Prazo</string>
    <string name="days_investment_term">90 dias</string>
    <string name="IR">IR:</string>
    <string name="IR_type">Regressivo</string>
    <string name="IOF">IOF:</string>
    <string name="IOF_type">Regressivo</string>
    <string name="rescue">Resgate:</string>
    <string name="rescue_type">Diário</string>
    <string name="issuing_bank">Emissor:</string>
    <string name="name_issuing_bank">Banco Pan</string>
    <string name="investment_income">Rendimento:</string>
    <string name="percentage_of_income">130% do CDI</string>
    <string name="text_btn_invest">Investir</string>
    <string name="chip_summary">Resumo</string>
    <string name="chip_account">Conta</string>
    <string name="chip_cards">Cartões</string>
    <string name="chip_loans">Empréstimos</string>
    <string name="chip_investments">Investimentos</string>
    <string name="chip_protections">Proteções</string>
    <string name="health_plan">Saúde de qualidade \npagando apenas R$ \n8,99 por mês.</string>


</resources>