<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="30dp"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivClientPhoto"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/contentDescriptionImageView"
            android:scaleType="fitXY"
            android:src="@drawable/client_photo1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <TextView
            android:id="@+id/tvClientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/client_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivClientPhoto"
            app:layout_constraintStart_toEndOf="@+id/ivClientPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivClientPhoto" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivVisibilityOff"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_visibility_off"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/ivClientPhoto"
            app:layout_constraintEnd_toStartOf="@id/ivHelpOutline"
            app:layout_constraintTop_toTopOf="@+id/ivClientPhoto" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHelpOutline"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_help_outline_24"
            app:layout_constraintBottom_toBottomOf="@+id/ivClientPhoto"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="@+id/ivClientPhoto" />

        <TextView
            android:id="@+id/tvCurrentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/current_balance"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivClientPhoto" />

        <TextView
            android:id="@+id/tvCurrentBalanceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_balance_number"
            android:textColor="@color/blue_app1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalance" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/border_icon"
            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentBalanceNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentBalanceNumber"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalanceNumber">

            <ImageView
                android:id="@+id/ivPix"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:src="@drawable/baseline_pix_24"
                android:scaleType="fitCenter"
                android:contentDescription="@string/icon_pix"
                app:tint="@color/blue_app1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pix"
                android:textColor="@color/gray1"
                android:layout_gravity="center" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>